# win_mac-nfc-app

./: .gitignore  README.md  docker-compose.yml
.docker/: app.Dockerfile
app/: main.py  main_sample.py  pyproject.toml
app/pypoetry/artifacts/a6/b4/0a/cb050f8e0b67a59022b49d53828b87a7ac55361b10891ba4e07b319991/: nfcpy-1.0.4-py3-none-any.whl
app/pypoetry/artifacts/d1/19/58/2c6dd2e15adf2fcc34842fad49a62297880085f0ef58a71faf7755399c/: ndeflib-0.3.3-py2.py3-none-any.whl
app/src/: app.py  nfc_reader.py
app/src/components/: settings.py
